added book delete, create and edit using class-based views

--- a/core/templates/books/detail.html
+++ b/core/templates/books/detail.html
@@ -16,6 +16,11 @@
       <h2>A book by {{ book.author }}.</h2>
     {% endif %}
     <p>{{ book.description }}</p>
+
+    <div class="book-actions">
+      <a href="{% url 'book-update' book.id %}" class="btn warn">Edit</a>
+      <a href="{% url 'book-delete' book.id %}" class="btn danger">Delete</a>
+    </div>
   </div>
 </section>
 {% endblock %}
