--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -27,7 +27,8 @@
       </div>
       <nav>
         <ul>
-          <li><a href="{% url 'book-index' %}">All Books</a></li>
+          <li><a href="{% url 'book-index' %}">All Bookss</a></li>
+          <li><a href="{% url 'book-create' %}">Add a New Book</a></li>
           <li><a href="{% url 'about' %}">About</a></li>
         </ul>
       </nav>
